<resources>
    <string name="app_name">易读</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="refresh">刷新</string>
    <string name="open_on_browser">用浏览器打开</string>
    <string name="news">新闻</string>
    <string name="photo">图片</string>
    <string name="movie">电影</string>
    <string name="video">视频</string>
    <string name="share_image">分享</string>
    <string name="save_image">保存</string>
    <string name="search">搜索</string>
    <string name="night_theme">夜间模式</string>
    <string name="suggest">问题反馈</string>
    <string name="about">关于我们</string>

    <string name="share">来自易读的分享:%1$s %2$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_news_detail">NewsDetail</string>

    <!-- 共享过度动画 -->
    <string name="transition_photos">transition_animation_news_photos</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_add_channel">AddChannel</string>

</resources>
